css/work.css
/*Overall*/
.clear {
    clear: both;
}
.light-font {
    font-weight: 300;
}
.big {
    font-size: 16px;
    font-weight: 300;
    text-align: center;
    color: rgba(89,89,106,0.8);
    margin: 50px;
    padding-left: 20px;
    padding-right: 20px;
    margin-bottom: 0;
}

body {
    display: flex;
}
header {
    width: 100%;
}
#mother {
    width: 100%;
}
.parent-container {
    justify-content: center;
    display: flex;
    /*default: flex-direction: row;*/
        /*other options: row-reverse, column, column-reverse
        flex froggy for visual on how those work*/
    flex-wrap: wrap;
        /*also nowrap, wrap-reverse*/
}
.download p {
    align-content: center;
    text-align: center;
    color: #ff3366;
    font-size: 16px;
    font-weight: 800;
}
p:hover{
    color: none;
    text-decoration: none;
}
.work-container {
    margin: 20px;
    flex: 0 0 300px;
    width: 100%;   
}
.work-container {
    display: none;
}
 /*PROJECTS*/
img {
    flex: 0 0 300px;
    width: 100%;
    background-size: cover;
    overflow: hidden;
}
footer {
    position: relative;
}

/*Desktop*/

@media only screen and (min-width: 768px) {

}

